[project]
name = "eva-strune-rizotron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "mypy>=1.16.1",
    "pandas-stubs>=2.2.3.250527",
    "ruff>=0.12.0",
    "scipy-stubs>=1.15.3.0",
    "siapy>=0.9.7",
    "typer>=0.16.0",
]
